--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Proc::Safetynet.
 
+0.02  Wed Dec 10 01:15:21 2008
+    - added shell provisioning commands
+
 0.01  Mon Nov 17 14:27:49 2008
 	- initial alpha release
 
